--- a/1. Setup.md
+++ b/1. Setup.md
@@ -68,5 +68,5 @@ sudo systemctl restart networking
 ``` 
 
 Confirmed ping connectivity between VMs.
-![](screenshots/Pasted image 20250716030213.png)
-![[screenshots/Pasted image 20250716030046.png]]
+![](screenshots/Pasted%20image%2020250716030213.png)
+![](screenshots/Pasted%20image%2020250716030046.png)
