--- a/2. Firewall.md
+++ b/2. Firewall.md
@@ -20,4 +20,4 @@ sudo ufw enable
 - All unused ports are blocked
 - Server responds only on 22 and 80
 - Confirmed with `sudo ufw status`
-![[Pasted image 20250717052031.png]]
+![](Pasted%20image%2020250717052031.png)
