Update 3. Threat Simulation and Detection.md

--- a/3. Threat Simulation and Detection.md
+++ b/3. Threat Simulation and Detection.md
@@ -5,15 +5,15 @@ nmap -sV 192.168.56.20
 ```
 
 Results:
-![[Pasted image 20250716025930.png]]
+![](Pasted%20image%2020250716025930.png)
 - Port 22 (SSH): Open
 - Port 80 (HTTP): Open
 - Other ports: filtered
 ### Detection on Ubuntu
 #### Wireshark
 Captured:
-![[Pasted image 20250716035540.png]]
-![[Pasted image 20250716035305.png]]
+![](Pasted%20image%2020250716035540.png)
+![](Pasted%20image%2020250716035305.png)
 - Over 2000 SYN packets were sent by Kali
 - Destination ports 22 (SSH) and 80 (HTTP) responded with SYN/ACK
 - All other port probes resulted in no reply as UFW was configured to allow only ports 22 and 80
@@ -23,7 +23,7 @@ Captured:
 nikto -host http://192.168.56.20
 ```
 Findings:
-![[Pasted image 20250716040758.png]]
+![](Pasted%20image%2020250716040758.png)
 - Server header: `Apache/2.4.52 (Ubuntu)`
 - Missing security headers:
     - `X-Frame-Options` (prevents clickjacking)
@@ -36,12 +36,12 @@ Findings:
 - No critical vulnerabilities found
 ### Detection on Ubuntu
 #### Wireshark
-![[Pasted image 20250716043629.png]]
+![](Pasted%20image%2020250716043629.png)
 #### Apache Logs
 ``` bash
 sudo cat /var/log/apache2/access.log
 ```
-![[Pasted image 20250716042957.png]]
+![](Pasted%20image%2020250716042957.png)
 Both show a rapid sequence of HTTP GET requests to suspicious paths such as /admin and /cgi-bin.
 
 
