Update 3. Threat Simulation and Detection.md

--- a/3. Threat Simulation and Detection.md
+++ b/3. Threat Simulation and Detection.md
@@ -1,4 +1,11 @@
 # Simulated Reconnaissance Attacks
+
+## Objective
+Simulate a pre-attack using scanning tools: Nmap to identify open ports and Nikto to identify web server vulnerabilities. Analyze the attack surface and observe how such pre-attack activity appears in Apache logs, Splunk, and Wireshark to build early threat detection and log analysis skills.
+
+Attacker Machine: Kali Linux (192.168.56.10)   
+Target Machine: Ubuntu Server (192.168.56.20) 
+
 ## nmap Scan (Kali)
 ```bash
 nmap -sV 192.168.56.20
@@ -50,6 +57,7 @@ Findings:
 sudo cat /var/log/apache2/access.log
 ```
 ![](screenshots/Pasted%20image%2020250716042957.png)
+
 Both show a rapid sequence of HTTP GET requests to suspicious paths such as /admin and /cgi-bin.
 
 
