Update 3. Threat Simulation and Detection.md

--- a/3. Threat Simulation and Detection.md
+++ b/3. Threat Simulation and Detection.md
@@ -58,6 +58,13 @@ sudo cat /var/log/apache2/access.log
 ```
 ![](screenshots/Pasted%20image%2020250716042957.png)
 
-Both show a rapid sequence of HTTP GET requests to suspicious paths such as /admin and /cgi-bin.
+#### Splunk
+Used Apache logs as a data source.
+Query: `index=main sourcetype=access_combined clientip="192.168.56.10" uri_path!="/"`
+![](screenshots/Pasted%20image%2020250717231022.png)
+![](screenshots/Pasted%20image%2020250717231209.png)
+
+All detected a rapid sequence of HTTP GET requests from Kali to suspicious paths such as /admin and /cgi-bin. As shown in Splunk, there were over 8000 events recorded in one minute.
+
 
 
