--- a/4. DoS Simulation.md
+++ b/4. DoS Simulation.md
@@ -24,7 +24,7 @@ ab -n 1000 -c 50 http://192.168.56.20/
 - `-c 50`: 50 concurrent users
 - Duration: 1.86 seconds
 
-![[4_2.png]]
+![](screenshots/4_2.png)
 
 ---
 
@@ -32,7 +32,7 @@ ab -n 1000 -c 50 http://192.168.56.20/
 ### Effect on System Resources
 The attack only lasted 1.86 seconds, which didn't allow me to capture a screenshot from the victim machine while it was running. 
 
-![[4_3.png]]
+![](screenshots/4_3.png)
 #### Observations:
 | Process                 | Metric           | Before DoS       | After DoS        | Change       |
 | ----------------------- | ---------------- | ---------------- | ---------------- | ------------ |
@@ -50,7 +50,7 @@ The attack only lasted 1.86 seconds, which didn't allow me to capture a screensh
 ### Apache Access Logs
 Located at `/var/log/apache2/access.log`
 
-![[4_4.png]]
+![](screenshots/4_4.png)
 - Logs showed rapid GET requests from Kali
 
 ### Splunk 
@@ -60,7 +60,7 @@ index=main sourcetype=access_combined clientip="192.168.56.10"
 | timechart span=2h count by status
 ```
 
-![[4_5.png]]
+![](screenshots/4_5.png)
 #### Observations:
 - Spike of 2000 requests at `2025-07-18 22:00
 - All status code 200
@@ -73,7 +73,7 @@ index=main sourcetype=access_combined clientip="192.168.56.10"
 ip.addr == 192.168.56.10 && http
 ```
 
-![[4_6.png]]
+![](screenshots/4_6.png)
 
 #### Observations:
 - Thousands of HTTP GET requests to `/` sent in under 2 seconds
@@ -84,7 +84,7 @@ ___
 ## Heavier Attack Simulation
 ### Pre-Attack
 
-![[4_7.png]]
+![](screenshots/4_7.png)
 - load average: 1.08, 0.50, 0.21
 
 ### `ab` Command Used
@@ -95,17 +95,17 @@ ab -n 30000 -c 1000 http://192.168.56.20/
 - `-c 1000: 1000 concurrent users
 - Duration: 1.86 seconds
 
-![[4_8.png]]
+![](screenshots/4_8.png)
 
 ### Detection & Analysis
 #### Effect on System Resources
 Screenshots taken during the attack
 
-![[4_9.png]]
+![](screenshots/4_9.png)
 - Multiple processes from `apache2`
 - load average spikes to 3.45, 1.25, 0.50
 
-![[4_10.png]]
+![](screenshots/4_10.png)
 - `apache2` processes don't show up here but load average spikes to 9.37, 3.38, 1.27
 
 ### Splunk
@@ -115,7 +115,7 @@ index=main sourcetype=access_combined clientip="192.168.56.10"
 | timechart span=1m count by status
 ```
 
-![[4_11.png]]
+![](screenshots/4_11.png)
 #### Observations:
 - Spike of 29000+ requests over 2 minutes with status codes 200 (successful), 403 (blocked), and 408 (delayed) 
 - Server responded with mostly 403 errors even though rate limiting wasn't configured
