Update 4. DoS Simulation.md

--- a/4. DoS Simulation.md
+++ b/4. DoS Simulation.md
@@ -84,8 +84,8 @@ ___
 ## Heavier Attack Simulation
 ### Pre-Attack
 
-![](screenshots/4_7.png)
-- load average: 1.08, 0.50, 0.21
+![[4_7.png]]
+- load average: 4.18, 5.45, 2.72
 
 ### `ab` Command Used
 ```bash
@@ -93,33 +93,54 @@ ab -n 30000 -c 1000 http://192.168.56.20/
 ````
 - `-n 30000`: Total requests sent
 - `-c 1000: 1000 concurrent users
-- Duration: 1.86 seconds
+- Duration: 274.9 seconds
 
-![](screenshots/4_8.png)
+![[4_8.png]]
 
 ### Detection & Analysis
 #### Effect on System Resources
-Screenshots taken during the attack
+Screenshots taken during the attack:
 
-![](screenshots/4_9.png)
-- Multiple processes from `apache2`
-- load average spikes to 3.45, 1.25, 0.50
+![[4_9.png]]
+- Multiple processes from `apache2` appear
+- Load average spikes to 22.27, 9.01, 4.15
 
-![](screenshots/4_10.png)
-- `apache2` processes don't show up here but load average spikes to 9.37, 3.38, 1.27
+![[4_10.png]]
+- Load average reaches a maximum of 49.36, 22.62, 9.75
+- Ubuntu VM was noticeably more laggy and became unresponsive when I tried to open Splunk after the attack.
+
+#### Resource Exhaustion 
+After the DoS test, the Ubuntu VM froze from running out of memory. I used `Ctrl + Alt + F3` to force terminal access and the kernel's Out-of-Memory (OOM) killer terminated `splunkd` to free resources.
+
+![[4_11.png]]
+
+For my home lab, running both Apache and Splunk on the same VM is convenient. But in production environments, Splunk would run on a separate system from the web server.
 
 ### Splunk
 #### Query Used:
 ```
 index=main sourcetype=access_combined clientip="192.168.56.10"
-| timechart span=1m count by status
+| timechart span=30m count by status
 ```
 
-![](screenshots/4_11.png)
+![[4_12.png]]
 #### Observations:
-- Spike of 29000+ requests over 2 minutes with status codes 200 (successful), 403 (blocked), and 408 (delayed) 
-- Server responded with mostly 403 errors even though rate limiting wasn't configured
-- The DoS had a measurable impact on the server
+- Spike of 30000 events in a 30-minute interval 
+- Server responded with mostly 200 (successful) and some 408 (delayed) 
+- The web server was under strain but able to handle most of the requests
+
+#### Apache Error Logs
+
+![[4_13.png]]
+
+Apache's error log captured important events:
+- Apache reached its configured `MaxRequestWorkers` limit:
+	- `AH00484: server reached MaxRequestWorkers setting
+	- `AH10159: server is within MinSpareThreads of MaxRequestWorkers
+- These messages confirm that the server became overloaded, limiting its ability to respond to additional connections. This matches the observed HTTP `408` timeout responses.
+- Apache later shut down and restarted **gracefully**:
+	- `AH00492: caught SIGWINCH, shutting down gracefully
+- There was no evidence of forced termination. The Apache web server itself didn't crash even though the VM did, due to system-level memory exhaustion.
 
 ---
 ## Mitigation Ideas
