--- a/4. DoS Simulation.md
+++ b/4. DoS Simulation.md
@@ -84,7 +84,7 @@ ___
 ## Heavier Attack Simulation
 ### Pre-Attack
 
-![[4_7.png]]
+![](screenshots/4_7.png)
 - load average: 4.18, 5.45, 2.72
 
 ### `ab` Command Used
@@ -95,24 +95,24 @@ ab -n 30000 -c 1000 http://192.168.56.20/
 - `-c 1000: 1000 concurrent users
 - Duration: 274.9 seconds
 
-![[4_8.png]]
+![](screenshots/4_8.png)
 
 ### Detection & Analysis
 #### Effect on System Resources
 Screenshots taken during the attack:
 
-![[4_9.png]]
+![](screenshots/4_9.png)
 - Multiple processes from `apache2` appear
 - Load average spikes to 22.27, 9.01, 4.15
 
-![[4_10.png]]
+![](screenshots/4_10.png)
 - Load average reaches a maximum of 49.36, 22.62, 9.75
 - Ubuntu VM was noticeably more laggy and became unresponsive when I tried to open Splunk after the attack.
 
 #### Resource Exhaustion 
 After the DoS test, the Ubuntu VM froze from running out of memory. I used `Ctrl + Alt + F3` to force terminal access and the kernel's Out-of-Memory (OOM) killer terminated `splunkd` to free resources.
 
-![[4_11.png]]
+![](screenshots/4_11.png)
 
 For my home lab, running both Apache and Splunk on the same VM is convenient. But in production environments, Splunk would run on a separate system from the web server.
 
@@ -123,7 +123,7 @@ index=main sourcetype=access_combined clientip="192.168.56.10"
 | timechart span=30m count by status
 ```
 
-![[4_12.png]]
+![](screenshots/4_12.png)
 #### Observations:
 - Spike of 30000 events in a 30-minute interval 
 - Server responded with mostly 200 (successful) and some 408 (delayed) 
@@ -131,7 +131,7 @@ index=main sourcetype=access_combined clientip="192.168.56.10"
 
 #### Apache Error Logs
 
-![[4_13.png]]
+![](screenshots/4_13.png)
 
 Apache's error log captured important events:
 - Apache reached its configured `MaxRequestWorkers` limit:
