Update 5. DoS Mitigation.md

--- a/5. DoS Mitigation.md
+++ b/5. DoS Mitigation.md
@@ -54,18 +54,18 @@ sshd
 ## DoS Test With Mitigation
 ### Pre-Attack CPU Usage
 
-![[5_1.png]]
+![](screenshots/5_1.png)
 - load average: 2.89, 3.34, 2.24
 ### Apache Bench
 Used the same command `ab -n 30000 -c 1000 http://192.168.56.20/`
 
-![[5_2.png]]
+![](screenshots/5_2.png)
 - This time, only 12.7k of the 30k requests were made
 - Error: `apr_socket_recv: Connection reset by peer (104)`
 
 ### Effect on System Resources
 
-![[5_3.png]]
+![](screenshots/5_3.png)
 - load average peaks at 87.02, 41.02, 16.71
 - This increase is much higher than in the previous DoS test, possibly explaining why the connection was closed early
 ### Splunk Detection
@@ -75,18 +75,18 @@ index=main sourcetype=access_combined clientip="192.168.56.10"
 | timechart span=30m count by status
 ```
 
-![[5_4.png]]
+![](screenshots/5_4.png)
 - Again, there is a spike of requests and most of the requests resulted in status code 200 with some 408
 
 ### Post-Attack
 #### Apache Error Log
-![[5_5.png]]
+![](screenshots/5_5.png)
 - This time, the Apache server reached MaxRequestWorkers like before but did not shut down
 - The Ubuntu VM did not freeze or crash 
 #### Did Fail2Ban block the attacker?
 Command: `sudo fail2ban-client status apache-badbots`
 
-![[5_6.png]] 
+![](screenshots/5_6.png) 
 
 - Even though the connection closed early, Kali's IP did not get banned, likely because
 	- Apache Bench isn't recognized as a malicious user agent
@@ -120,17 +120,17 @@ ___
 ## DoS Test With Custom Jail
 ### Apache Bench
 Used the same command `ab -n 30000 -c 1000 http://192.168.56.20/`
-![[5_7.png]]
+![](screenshots/5_7.png)
 - The DoS ended almost immediately with `apr_socket_recv: Connection refused (111)`
 
 ### Detection
 #### Splunk
 
-![[5_8.png]]
+![](screenshots/5_8.png)
 - 758 requests had status 200 responses, indicating the attack was stopped before the server timed out or got overwhelmed
 #### Fail2Ban
 Command: `sudo fail2ban-client status apache-dos
 
-![[5_9.png]]
+![](screenshots/5_9.png)
 - After setting up the apache-dos jail, Fail2Ban successfully detected the DoS and the attacker's IP was banned!
 
